# PluginMechanism

./: CMakeLists.txt  LICENSE  README.md
3rd/: CMakeLists.txt
3rd/rapidXML/: CMakeLists.txt
core/: Platform.h  Plugin.h  PluginManager.cpp  PluginManager.h  Prerequisites.h
interface/: IModule.h
main/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
