set(TARGET_NAME "rapidXML")
file(GLOB RAPID_XML_H *.hpp)
add_library(${TARGET_NAME} INTERFACE ${RAPID_XML_H})

target_include_directories(${TARGET_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties( ${TARGET_NAME} PROPERTIES OUTPUT_NAME_DEBUG "${TARGET_NAME}")
set_target_properties( ${TARGET_NAME} PROPERTIES PREFIX "")
set_target_properties( ${TARGET_NAME} PROPERTIES FOLDER "ThirdParty")

set_target_properties( ${TARGET_NAME} PROPERTIES 
        ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}
        LIBRARY_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}
        RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR})